=== Version 0.9.4
* Enhancements
  * Added class_name method to Element
  * Added wait_for_expected_title and expected_element_visible methods (Thanks smartkiwi)
  * Updated to use the latest selenium-webdriver 2.37.0
* Fixes
  * Fixed issue with custom widgets on Ruby 1.8.7 (Thanks X Zhang)

=== Version 0.9.3 / 2013-8-23
* Enhancements
  * Updated to use the latest selenium-webdriver 2.35.1

=== Version 0.9.2 / 2013-8-23
* Enhancements
  * Added elements method to accessor so one can gen methods for generic collections of elements
  * Updated to use the latest selenium-webdriver 2.35.0

=== Version 0.9.1 / 2013-7-16
* Enhancements
  * Added css locator support for Image (Thanks Elben Shira)
* Fixes
  * Corrected isse with generated method in widgets module

=== Version 0.9.0 / 2013-6-11
* Enhancements
  * Added plural _elements methods for the following types:
    * area
    * canvas
    * audio
    * video
    * svg
  * Added basic element support for the following types:
    * as
    * blockquote
    * body
    * br
    * caption
    * col
    * colgroup
    * command
    * data
    * datalist
    * del
    * details
    * dialog
    * dl
    * embed
    * fieldset
    * head
    * hr
    * ins
    * keygen
    * legend
    * map
    * menu
    * meta
    * meter
    * object
    * optgroup
    * output
    * param
    * pre
    * progress
    * small
    * strong
    * style
    * time
    * title
    * track
  * Updated to use the latest selenium-webdriver 2.33.0
* Fixes
  * Fixed issue when using the page and element accessors for html 5 elements.

=== Version 0.8.10 / 2013-5-3
* Enhancements
  * Updated populate_page_with to also check if the element is visible prior to setting value
  * Updated to use the latest watir-webdriver 0.6.4

=== Version 0.8.9 / 2013-4-13
* Enhancements
  * Updated to use the latest watir-webdriver 0.6.3
  * Updated to use the latest selenium-webdriver 2.32.1
* Fixes